Ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls:
  - hosts:
    - grafana-k8s.witheldokan.com
    secretName: dokan-tls
  rules:
  - host: grafana-k8s.witheldokan.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
